-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
Qt Creator 13.0.0-beta1
-
None
-
44c9074c0 (13.0)
While editing I get error output from the yaml parser for intermediate content
YAML:7:20: error: invalid boolean
Enabled: t
^
| For Gerrit Dashboard: QTCREATORBUG-30269 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 537237,8 | ClangFormat: Move clangformat output to infolabel | 13.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |