ClangFormat: Move clangformat output to infolabel

Move clangformat output to infolabel in clangformatconfigwidget
to reduce noiziness in cli and to enhance the convenience of editing
the .clang-format file.

Fixes: QTCREATORBUG-30269
Change-Id: I78053bde9791122172f1d3d4ba712a9954ea9c4e
Reviewed-by: Eike Ziller <eike.ziller@qt.io>
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>